--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
+.app {
   text-align: center;
+  margin-top: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.grid {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  width: fit-content;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  padding: 2px;
 }
 
-.App-link {
-  color: #61dafb;
+.row {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.node {
+  width: 20px;
+  height: 20px;
+  border: 1px solid #ccc;
 }
+
+.node-start {
+  background-color: #42f55d;
+}
+
+.node-end {
+  background-color: #f54242;
+}
+
+.node-wall {
+  background-color: #24292e;
+}
+
+.node-visited {
+  background-color: #76c5ff;
+}
+
+.node-shortest-path {
+  background-color: #f2a154;
+}
+
+.btn {
+  padding: 10px 20px;
+  font-size: 16px;
+  margin-bottom: 1rem;
+}
+
+
